--- a/main.html
+++ b/main.html
@@ -7,6 +7,44 @@
 </head>
 
 <body>
+	 <!-- Marquee Header -->
+  <marquee><h1>Welcome to Accio Jobs!</h1></marquee>
+
+  <!-- Blog Link -->
+  <h1>
+    <a href="https://acciojob.com/blog">Accio Job's Blog</a>
+  </h1>
+
+  <!-- Article 1: Brute Force vs. Optimization -->
+  <h2>
+    <a href="#">Brute Force vs. Optimization</a>
+  </h2>
+  <img 
+    src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000"
+    height="200px"
+    alt="Brute Force vs Optimization">
+  <p>We can say that optimization is the process of making something as effective or functional as possible...</p>
+
+  <!-- Article 2: DSA vs. Competitive Programming -->
+  <h2>
+    <a href="#">DSA vs. Competitive Programming</a>
+  </h2>
+  <img 
+    src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdGl2ZSUyMHByb2dyYW1taW5nfGVufDB8fHx8MTY3MDk5ODg1NA&ixlib=rb-4.0.3&q=80&w=2000"
+    height="200px"
+    alt="DSA vs Competitive Programming">
+  <p>DSA or Competitive programming? This is a common confusion among aspiring software engineers...</p>
+
+  <!-- Article 3: Complete Guide on FlexBox -->
+  <h2>
+    <a href="#">Complete Guide on FlexBox</a>
+  </h2>
+  <img 
+    src="https://acciojob.com/blog/untitled-19/"
+    height="200px"
+    alt="Guide on FlexBox">
+  <p>As a job seeker, you may wonder whether you should spend time mastering Flexbox and how it helps in frontend development...</p>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
